<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2018 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/normal_theme_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_theme" />

            <Button
                android:id="@+id/light_theme_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_theme" />

            <Button
                android:id="@+id/day_night_theme_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_night_theme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/enabled_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enabled_control" />

            <Button
                android:id="@+id/disabled_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/disabled_control" />
        </LinearLayout>

        <TextView
            android:id="@+id/enabled_button_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enabled_button_notification" />

        <TextView
            android:id="@+id/disabled_button_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disabled_button_notification" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/enabled_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enabled_control" />

            <Switch
                android:id="@+id/disabled_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/disabled_control" />
        </LinearLayout>


        <TextView
            android:id="@+id/enabled_switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enabled_switch_off_notification" />

        <TextView
            android:id="@+id/disabled_switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disabled_switch_off_notification" />

        <EditText
            android:id="@+id/edittext"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/edittext_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edittext_empty" />


        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/checkbox" />

        <TextView
            android:id="@+id/checkbox_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_unchecked_notification" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb1" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb2" />
        </RadioGroup>

        <TextView
            android:id="@+id/rb1_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb1_unchecked_notification" />

        <TextView
            android:id="@+id/rb2_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb2_unchecked_notification" />

        <CheckBox
            android:id="@+id/star_checkbox"
            style="?android:attr/starStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/star" />

        <TextView
            android:id="@+id/star_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star_unchecked_notification" />

        <ToggleButton
            android:id="@+id/toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip" />

        <TextView
            android:id="@+id/toggle_button_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_button_off_notification" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="20dip"
            android:drawSelectorOnTop="true"
            android:entries="@array/options" />

        <TextView
            android:id="@+id/spinner_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dip" />

    </LinearLayout>

</ScrollView>